# FlowerLover

./: .gitignore  README.md  mainpage.html  styles.css
MultipleLikesEmulation/: CMakeLists.txt  answer.cpp  answer.hpp  database.cpp  database.hpp  main.cpp  poll.cpp  poll.hpp  user.cpp  user.hpp  user.hpp.autosave
Site/css/: styles.css
Site/html/: cab.html  mainpage.html
Site/maket/: Untitled.fig
hack/css/: styles.css
hack/html/: auth.html  mainpage.html  testpage.html  true_mainpage.html
hack/js/: script.js
hack/maket/: Untitled.fig  stylesheet.fig
